fixed checkbox, radio button squish

--- a/src/ui/SearchableReferenceSelectorMxNine.css
+++ b/src/ui/SearchableReferenceSelectorMxNine.css
@@ -137,4 +137,5 @@ Place your custom CSS here
 
 .srs .srs-option input[type="checkbox"], input[type="radio"] {
     margin-right: 0.5em !important;
+    flex-shrink: 0 !important;
 }
